--- a/index.html
+++ b/index.html
@@ -217,50 +217,52 @@
       </section>
       <!-- END of questions section -->
       <!-- GALLERY BEGINS -->
-      <section class="gallery wrapper">
-         <nav class="gallery__nav">
-            <h2 class="gallery__nav__title title txt-uppercase">Latest Shoots</h2>
-            <ul class="gallery__nav__list">
-               <li class="gallery__list__item txt-uppercase gallery__list__item--1 title"><a href="#">all</a></li>
-               <li class="gallery__list__item txt-uppercase gallery__list__item--2 title"><a href="#">weddings</a></li>
-               <li class="gallery__list__item txt-uppercase gallery__list__item--3 title"><a href="#">scenery</a></li>
-               <li class="gallery__list__item txt-uppercase gallery__list__item--4 title"><a href="#">portraits</a></li>
-            </ul>
-         </nav>
-         <div class="gallery__items">
-            <figure class="gallery__items__quad quad1">
-               <img src="assets/image-11.jpeg" alt="View from above of a waterfall">
-               <figcaption class="quad__content">
-                  <a href="#" class="quad__content--hover">
-                        <p class="gallery__items__title title txt-uppercase">landing page</p>
-                  </a>
-               </figcaption>
-            </figure>
-            <figure class="gallery__items__quad quad2">
-               <img src="assets/image-12.jpeg" alt="High view of a cultural and densely populated city over the water">
-               <figcaption class="quad__content">
-                  <a href="#" class="quad__content--hover">
-                        <p class="gallery__items__title title txt-uppercase">landing page</p>
-                  </a>
-               </figcaption>
-            </figure>
-            <figure class="gallery__items__quad quad3">
-               <img src="assets/image-13.jpeg" alt="People on the beach moving around a boat">
-               <figcaption class="quad__content">
-                  <a href="#" class="quad__content--hover">
-                        <p class="gallery__items__title title txt-uppercase">landing page</p>
-                  </a>
-               </figcaption>
-            </figure>
-            <figure class="gallery__items__quad quad4">
-               <img src="assets/image-14.jpeg" alt="View from above of a green mountain line and coastal beach below">
-               <figcaption class="quad__content">
-                  <a href="#" class="quad__content--hover">
-                        <p class="gallery__items__title title txt-uppercase">landing page</p>
-                  </a>
-               </figcaption>
-            </figure>
-         </div>
+      <section class="gallery">
+            <div class="gallery__wrapper wrapper">
+                  <nav class="gallery__nav">
+                     <h2 class="gallery__nav__title title txt-uppercase">Latest Shoots</h2>
+                     <ul class="gallery__nav__list">
+                        <li class="gallery__list__item txt-uppercase gallery__list__item--1 title"><a href="#">all</a></li>
+                        <li class="gallery__list__item txt-uppercase gallery__list__item--2 title"><a href="#">weddings</a></li>
+                        <li class="gallery__list__item txt-uppercase gallery__list__item--3 title"><a href="#">scenery</a></li>
+                        <li class="gallery__list__item txt-uppercase gallery__list__item--4 title"><a href="#">portraits</a></li>
+                     </ul>
+                  </nav>
+                  <div class="gallery__items">
+                     <figure class="gallery__items__quad quad1">
+                        <img src="assets/image-11.jpeg" alt="View from above of a waterfall">
+                        <figcaption class="quad__content">
+                           <a href="#" class="quad__content--hover">
+                                 <p class="gallery__items__title title txt-uppercase">landing page</p>
+                           </a>
+                        </figcaption>
+                     </figure>
+                     <figure class="gallery__items__quad quad2">
+                        <img src="assets/image-12.jpeg" alt="High view of a cultural and densely populated city over the water">
+                        <figcaption class="quad__content">
+                           <a href="#" class="quad__content--hover">
+                                 <p class="gallery__items__title title txt-uppercase">landing page</p>
+                           </a>
+                        </figcaption>
+                     </figure>
+                     <figure class="gallery__items__quad quad3">
+                        <img src="assets/image-13.jpeg" alt="People on the beach moving around a boat">
+                        <figcaption class="quad__content">
+                           <a href="#" class="quad__content--hover">
+                                 <p class="gallery__items__title title txt-uppercase">landing page</p>
+                           </a>
+                        </figcaption>
+                     </figure>
+                     <figure class="gallery__items__quad quad4">
+                        <img src="assets/image-14.jpeg" alt="View from above of a green mountain line and coastal beach below">
+                        <figcaption class="quad__content">
+                           <a href="#" class="quad__content--hover">
+                                 <p class="gallery__items__title title txt-uppercase">landing page</p>
+                           </a>
+                        </figcaption>
+                     </figure>
+                  </div>
+            </div>
          <!-- LEARN HOW TO SWITCH ON CLICK TO DIFFERENT GALLERY -->
          <!-- <div class="gallery__items">
             <figure>
@@ -294,14 +296,14 @@
 <!-- END OF MAIN SECTION -->
 <!-- FOOTER BEGINS -->
 <footer>
-   <div class="wrapper">
+   <div class="footer wrapper">
       <!-- footer-contact begins -->
       <section class="contact">
          <h3 class="contact__title txt-uppercase subtitle">contact</h3>
          <div class="contact__content">
-            <p class="contact__content--email"></p>
-            <p class="contact__content--phone"></p>
-            <p class="contact__content--city"></p>
+            <p class="contact__content--email">info@delicate.com</p>
+            <p class="contact__content--phone">123 456-7890</p>
+            <p class="contact__content--city">Toronto, Ontario</p>
          </div>
          <form action="">
             <input type="email" placeholder="your email">
@@ -318,8 +320,36 @@
       <!-- footer-about ends -->
       <!-- footer-instagram begins -->
       <section class="instagram">
+         <h3 class="instagram__title txt-uppercase subtitle">instagram</h3>
          <div class="instagramWrapper">
-            <ul class="instaGallery">
+               <div class="instaGallery">
+                  <figure class="instaGallery__item__img">
+                        <img src="assets/image-15.jpeg" alt="a boat floating in clear blue water in the daytime.">
+                  </figure>
+                  <figure class="instaGallery__item__img">
+                        <img src="assets/image-16.jpeg" alt="Orange exterior of home.">
+                  </figure>
+                  <figure class="instaGallery__item__img">
+                        <img src="assets/image-17.jpeg" alt="The shore of a city on the water with boats.">
+                  </figure>
+                  <figure class="instaGallery__item__img instaGaller__item__img--4">
+                        <img src="assets/image-18.jpeg" alt="A bicycle with red spokes.">
+                  </figure>
+                  <figure class="instaGallery__item__img">
+                        <img src="assets/image-19.jpeg" alt="bird's eye view of a mountain and surrounding water.">
+                  </figure>
+                  <figure class="instaGallery__item__img">
+                        <img src="assets/image-20.jpeg" alt="A narrow European road with many colorful buildings.">
+                  </figure>
+                  <figure class="instaGallery__item__img">
+                        <img src="assets/image-21.jpeg" alt="The back of a classic red European car.">
+                  </figure>
+                  <figure class="instaGallery__item__img">
+                        <img src="assets/image-22.jpeg" alt="Colorful buildings on the shore.">
+                  </figure>
+
+               </div>
+            <!-- <ul class="instaGallery">
                <li class="instaGallery__item">
                   <figure class="instaGallery__item__img">
                      <img src="assets/image-15.jpeg" alt="a boat floating in clear blue water in the daytime.">
@@ -339,9 +369,9 @@
                   <figure class="instaGallery__item__img">
                      <img src="assets/image-18.jpeg" alt="A bicycle with red spokes.">
                   </figure>
-               </li>
+               </li> -->
                <!-- second row of footer gallery begins -->
-               <li class="instaGallery__item">
+               <!-- <li class="instaGallery__item">
                   <figure class="instaGallery__item__img">
                      <img src="assets/image-19.jpeg" alt="bird's eye view of a mountain and surrounding water.">
                   </figure>
@@ -361,7 +391,7 @@
                      <img src="assets/image-22.jpeg" alt="Colorful buildings on the shore.">
                   </figure>
                </li>
-            </ul>
+            </ul> -->
          </div>
       </section>
       <!-- footer-instagram ends -->
